networking/02-ingress/basic-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  labels:
    app: web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
